<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvAbout"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="@dimen/corner_cardview_radius"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageView
            android:id="@+id/imgFotoCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/unam_pumas"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_left">
                <TextView
                    android:id="@+id/tvNombreDev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pNombreDev"
                    android:textSize="@dimen/nombre_cardview"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/tvEmailDev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/pEmailDev">
                </TextView>
                <TextView
                    android:id="@+id/tvNombreUniversidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pNombreUniversidad"
                    android:textSize="@dimen/nombre_unam_cardview"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/tvIngDev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pFacIngenieria">
                </TextView>
                <TextView
                    android:id="@+id/tvFacDev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"

                    android:text="@string/pIngenieria">
                </TextView>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>